# workers

./: .containerignore  .gitignore  .pre-commit-config.yaml  Containerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
product/: requirements.md
product/tasks/: 0-add-git-hooks.md  1-add-github-actions.md  10-open-ai-api-key.md  2-add-tests.md  3-add-langgraph-react-agent.md  4-add-json-state-management-tools.md  5-add-template-string-substitution-prompt.md  6-enhance-agent-response.md  7-add-interrupt-to-agent.md  8-add-traces-as-artifacts.md  9-add-streamlit-ui.md
tests/: __init__.py  test_placeholder.py
tests/framework/: __init__.py  test_agent.py  test_executor.py
tests/service/: test_app.py  test_integration.py  test_supervisor.py
workers/framework/a2a/: executor.py
workers/framework/agent/: agent.py
workers/service/: __init__.py  app.py  run.py  settings.py
workers/service/agents/: supervisor.py
workers/service/agents/supervisor/: supervisor.py
workers/service/agents/supervisor/prompts/: system.md
workers/service/api/a2a/: executor.py
workers/streamlit/: __init__.py  app.py
