[project]
name = "workers"
version = "0.1.0"
description = "An agent which manages it's own state and memories and does work"
authors = [
    {name = "MadaraUchiha-314",email = "rohithr31+github@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "a2a-sdk>=0.2.0",
    "jsonpath-ng>=1.6.0",
    "jsonpatch>=1.33",
    "pydantic>=2.9.0",
    "streamlit>=1.39.0",
    "httpx>=0.27.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "workers", from = "src"}]
