[project]
name = "workers"
version = "0.1.0"
description = "An agent which manages it's own state and memories and does work"
authors = [
    {name = "MadaraUchiha-314",email = "rohithr31+github@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "a2a-sdk>=0.2.0",
    "jsonpath-ng>=1.6.0",
    "jsonpatch>=1.33",
    "pydantic>=2.9.0",
    "streamlit>=1.39.0",
    "httpx>=0.27.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "workers"}]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"
ruff = "^0.8.4"
isort = "^5.13.2"
mypy = "^1.13.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["workers"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    # Ignore deprecation warning from a2a-sdk (third-party library)
    "ignore:.*HTTP_413_REQUEST_ENTITY_TOO_LARGE.*:DeprecationWarning",
]
